--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -12,9 +12,10 @@ jobs:
             - uses: actions/checkout@v2
             - uses: actions/setup-node@v1
               with:
-                  node-version: '12.x'
-            - run: npm install
-            - run: npm run build
+                  node-version: '16.x'
+            - run: npm i -g yarn
+            - run: yarn
+            - run: yarn build build
             - uses: peaceiris/actions-gh-pages@v3
               with:
                   github_token: ${{ secrets.GITHUB_TOKEN }}
