--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -15,7 +15,7 @@ jobs:
                   node-version: '16.x'
             - run: npm i -g yarn
             - run: yarn
-            - run: yarn build build
+            - run: yarn build
             - uses: peaceiris/actions-gh-pages@v3
               with:
                   github_token: ${{ secrets.GITHUB_TOKEN }}
